--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,16 +21,8 @@
                 android:layout_height="wrap_content"
                 android:textSize="15dp"
                 android:textStyle="bold"
-                android:text="Selamat Datang, " />
+                android:text="Selamat Datang" />
 
-            <TextView
-                android:id="@+id/lblUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:layout_toRightOf="@id/textView3"
-                android:text="User" />
 
             <Button
                 android:id="@+id/btnMateri"
@@ -46,19 +38,7 @@
                 android:layout_below="@id/btnMateri"
                 android:text="Soal" />
 
-            <Button
-                android:id="@+id/btnGallery"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btnSoal"
-                android:text="Gallery" />
 
-            <Button
-                android:id="@+id/btnEntertainment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btnGallery"
-                android:text="Entertainment" />
         </RelativeLayout>
     </ScrollView>
 
