--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
                     android:layout_below="@id/editUsername"
                     android:ems="10"
                     android:hint="Password"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPassword" />
 
                 <Button
                     android:id="@+id/btnLogin"
